Completed the responsiveness of the login page and finished creating the components that will be reused in other pages, such as the button component

--- a/client/src/components/Form/form.css
+++ b/client/src/components/Form/form.css
@@ -16,7 +16,13 @@
   height: 40px;
   border-radius: 5px;
   border: 1px solid #ccc;
-  margin-bottom: 100px;
+  padding-left: 10px;
+}
+
+.input_password {
+  width: 493px;
+  border-radius: 5px;
+  border: 1px solid #ccc;
   padding-left: 10px;
 }
 
@@ -50,4 +56,19 @@
   margin-top: 10px;
   text-align: left;
   cursor: pointer;
+}
+
+@media screen and (max-width: 768px) {
+  .input_email {
+    width: 312px;
+  }
+
+  .input_password {
+    width: 312px;
+  }
+
+  .button_login {
+    width: 312px;
+  }
+  
 }
