--- a/client/src/pages/Login/login.css
+++ b/client/src/pages/Login/login.css
@@ -51,3 +51,30 @@
   color: #515255;
   margin-bottom: 25px;
 }
+
+
+@media screen and (max-width: 768px) {
+  .container_img_form {
+    flex-direction: column;
+  }
+
+  .container_img {
+    display: none;
+  }
+
+  .container_login_form {
+    width: 100%;
+    height: 100%;
+  }
+
+  .container_login_form h1 {
+    margin-bottom: 80px;
+    font-size: 24px;
+  }
+
+  .container_login_form p {
+    font-size: 16px;
+    margin-bottom: 25px;
+  }
+  
+}
