--- a/client/src/components/Form/formLogin.css
+++ b/client/src/components/Form/formLogin.css
@@ -40,6 +40,11 @@
   text-transform: uppercase;
 }
 
+.button_login:hover {
+  background-color: #F52;
+  opacity: 0.8;
+}
+
 .button_register {
   font-size: 16px;
   font-style: normal;
@@ -52,6 +57,10 @@
   margin-top: 10px;
   text-align: left;
   cursor: pointer;
+}
+
+.button_register:hover {
+  color: #F52;
 }
 
 @media screen and (max-width: 768px) {
