--- a/client/src/pages/Login/login.css
+++ b/client/src/pages/Login/login.css
@@ -25,7 +25,7 @@
 
 .container_login_form {
   width: 60%;
-  height: 100%;
+  height: 100vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -62,11 +62,10 @@
 
   .container_login_form {
     width: 100%;
-    height: 100%;
   }
 
   .container_login_form h1 {
-    margin-bottom: 80px;
+    margin-bottom: 40px;
     font-size: 24px;
   }
 
