refactor: Responsive CSS and component construction

--- a/client/src/components/Modal/Modal.css
+++ b/client/src/components/Modal/Modal.css
@@ -103,10 +103,10 @@ margin-bottom: 15px;
   justify-content: center;
   display: flex;
 }
-.button_cancelar{
+/* .button_cancelar{
 
 
 }
 .visualizar{
   
-}
+} */
