--- a/client/src/components/ProfileHome/ProfileHome.css
+++ b/client/src/components/ProfileHome/ProfileHome.css
@@ -1,51 +1,76 @@
 .container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 48vh; 
+  background-color: #ffff; 
+}
+
+.content {
+  display: flex;
+  align-items: center;
+}
+
+.content img {
+  width: 150px; 
+  height: auto;
+  margin-right: 20px; 
+}
+
+.content p {
+  margin: 0;
+  font-size: 16px; 
+  color: var(--Neutral-Colors-Neutral-120, #303133);
+}
+.text-container {
+  display: flex;
+  flex-direction: column; 
+  padding: 30px;
+}
+
+.buttonProfileHome {
+  margin-top: 15px;
+  padding: 10px 20px; 
+  font-size: 16px; 
+  background-color: #00000061; 
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.buttonProfileHome:hover {
+  background-color: #F52;
+}
+
+.imgProfileHome{
+  border-radius: 50%;
+}
+.avatarProfile{
+  size: 500px;
+}
+@media screen and (max-width: 768px) {
+  .container {
     display: flex;
     justify-content: center;
     align-items: center;
     height: 50vh; 
     background-color: #ffff; 
+    flex-direction: column;
   }
 
   .content {
     display: flex;
     align-items: center;
+    flex-direction: column;
   }
-
+  
   .content img {
-    width: 150px; 
+    width: 100px; 
     height: auto;
-    margin-right: 20px; 
+    align-items: center;
+    justify-content: center;
   }
-
-  .content p {
-    margin: 0;
-    font-size: 16px;
-    color: #0B0C0D; 
-  }
-  .text-container {
-    display: flex;
-    flex-direction: column; 
-    padding: 30px;
-  }
-
-  .buttonProfileHome {
-    margin-top: 20px; 
-    padding: 10px 20px; 
-    font-size: 16px; 
-    background-color: #00000061; 
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-  }
-
-  .buttonProfileHome:hover {
-    background-color: #111133;
-    ; 
-  }
-
-  .imgProfileHome{
-    border-radius: 50%;
-  }
-  .avatarProfile{
-    size: 500px;
-  }
+  
+  
+}
