feat: created axios instances for connecting to the backend and implemented the useEffects for the portfolio page

--- a/client/src/pages/Portifolio/Portifolio.css
+++ b/client/src/pages/Portifolio/Portifolio.css
@@ -17,6 +17,15 @@
   padding: 20px;
 }
 
+.container_basic_card {
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+  width: 100%;
+  height: 100%;
+}
+
 .container_appBar {
   display: flex;
   justify-content: space-between;
