--- a/client/src/components/BasicCard2/BasicCard2.css
+++ b/client/src/components/BasicCard2/BasicCard2.css
@@ -1,9 +1,5 @@
-.basicCard{
-    padding-left: 20px;
-  }
-
-.body{
-  display: flex;
-  flex-direction: column;
-  margin-bottom: 1em;
+.img_project {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
