--- a/client/src/components/BasicCard2/BasicCard2.css
+++ b/client/src/components/BasicCard2/BasicCard2.css
@@ -1,5 +1,21 @@
-.img_project {
+.container_img_project {
+  width: 100%;
+  height: 100%;
+}
+
+.container_img_project img {
   width: 100%;
   height: 100%;
   object-fit: cover;
+}
+
+.container_avatar_user {
+  width: 25px;
+  border-radius: 100%;
+  margin-top: 10px;
+}
+
+.container_avatar_user img {
+  width: 100%;
+  border-radius: 100%;
 }
