--- a/client/src/pages/Portifolio/Portifolio.css
+++ b/client/src/pages/Portifolio/Portifolio.css
@@ -1,5 +1,5 @@
 .portifolio_container{
-  width: 100vw;
+  width: 100%;
   height: 100%;
   display:flex;
   flex-direction: column;
@@ -7,23 +7,32 @@
   justify-content: center;
 }
 
-.portifolio_container .profile {
+.profile {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   width: 100%;
-  height: 48vh;
+  /* height: 20%; */
+}
+
+.container_my_project {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
   padding: 20px;
 }
 
 .container_basic_card {
-  display: flex;
-  align-items: center;
-  flex-wrap: wrap;
-  justify-content: flex-start;
+  display: grid;
+  grid-template-columns: repeat(4, minmax(0, 1fr));
+  gap: 20px; 
   width: 100%;
   height: 100%;
+  margin-top: 20px;
 }
 
 .container_appBar {
@@ -36,25 +45,36 @@
 
 .container_text_my_projects{
   padding-bottom: 10px;
-  padding-left: 20px;
   font-size: 25px;
   color: rgb(90, 83, 83);
 }
 
+
 @media screen and (max-width: 768px) {
   .container_text_my_projects{
     padding-bottom: 10px;
-    padding-left: 25px;
     font-size: 25px;
     color: rgb(90, 83, 83);
   }
 
   .container_basic_card {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+    display: grid;
+    grid-template-columns: repeat(1, minmax(0, 1fr));
+    gap: 30px; 
     width: 100%;
     height: 100%;
+    margin-top: 20px;
+  }
+  
+}
+
+@media screen and (min-width: 1200px) and (max-width: 1600px) {
+  .container_basic_card {
+    display: grid;
+    gap: 20px;
+    grid-template-columns: repeat(3, minmax(0, 1fr));
+    width: 100%;
+    height: 100%;
+    margin-top: 20px;
   }
 }
