feat: css inital in modal to view projects

--- a/client/src/components/BasicCard2/BasicCard2.css
+++ b/client/src/components/BasicCard2/BasicCard2.css
@@ -42,7 +42,7 @@
   text-align: center;
   margin-left: 5px;
   padding: 4px;
-  background-color: rgb(235, 235, 235);
+  background-color: #00000009;
   border-radius: 15px;
 }
 
