--- a/client/src/components/TextFild/TextFild.css
+++ b/client/src/components/TextFild/TextFild.css
@@ -19,7 +19,7 @@
 
 @media only screen and (max-width: 600px) {
   .buscarTags {
-    width: 100vw;
+    width: 100%;
     display: flex;
     align-items: center;
   }
