--- a/client/src/components/BasicCard2/BasicCard2.css
+++ b/client/src/components/BasicCard2/BasicCard2.css
@@ -1,6 +1,7 @@
 .container_img_project {
   width: 100%;
   height: 100%;
+  /* position: relative; */
 }
 
 .container_img_project img {
@@ -8,6 +9,18 @@
   height: 100%;
   object-fit: cover;
   border-radius: 5px;
+}
+
+.edit_icon {
+  position: absolute;
+  cursor: pointer;
+  border: none;
+  background-color: #fcfdff8a;
+  right: 1px;
+  top: 10px;
+  width: 30px;
+  height: 30px;
+  border-radius: 100%;
 }
 
 .container_avatar_date_tag {
