--- a/client/src/components/BasicCard2/BasicCard2.css
+++ b/client/src/components/BasicCard2/BasicCard2.css
@@ -1,7 +1,9 @@
+.container_info_project {
+  position: relative;
+}
 .container_img_project {
   width: 100%;
   height: 100%;
-  /* position: relative; */
 }
 
 .container_img_project img {
@@ -15,12 +17,26 @@
   position: absolute;
   cursor: pointer;
   border: none;
-  background-color: #fcfdff8a;
-  right: 1px;
+  background-color: rgba(255, 86, 34, 0.527);
+  right: 10px;
   top: 10px;
   width: 30px;
   height: 30px;
   border-radius: 100%;
+  z-index: 1;
+}
+
+.edit_icon:hover {
+  background-color: #F52;
+}
+
+#edit_project:hover {
+  background-color: rgba(255, 86, 34, 0.637);
+  position: relative;
+}
+
+#delete_project:hover {
+  background-color: rgba(255, 86, 34, 0.637);
 }
 
 .container_avatar_date_tag {
