modais de confirmação

--- a/client/src/components/BotaoAdicionarModal/BotaoAdicionarModal.css
+++ b/client/src/components/BotaoAdicionarModal/BotaoAdicionarModal.css
@@ -3,7 +3,7 @@
     padding: 10px 20px; 
     font-size: 16px; 
     background-color: #00000061; 
-    color: white;
+    color: #F52;
     border: none;
     border-radius: 5px;
     cursor: pointer;
