--- a/client/src/components/Modal/modalToView.css
+++ b/client/src/components/Modal/modalToView.css
@@ -17,6 +17,14 @@
   cursor: pointer;
 }
 
+.container_name_data_title_tags_img {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+}
+
 .container_name_data_title_tags {
   display: flex;
   align-items: center;
@@ -65,6 +73,7 @@
   justify-content: center;
   width: 400px;
   height: 50px;
+  color: #303133;
 }
 
 .container_tags {
@@ -93,7 +102,7 @@
   justify-content: center;
   margin-top: 25px;
   width: 100%;
-  height: 60%;
+  height: 100%;
 }
 
 .container_img_project_modal img {
@@ -122,6 +131,76 @@
 
 .container_url a {
   text-decoration: solid;
-  color: #1200b8;
+  color: #608AE1;
   cursor: pointer;
+}
+
+@media screen and (max-width: 768px){
+  .container_name_data_title_tags_img {
+    height: 100%;
+    flex-direction: column-reverse;
+  }
+
+  .container_to_view_project {
+    height: 100%;
+  }
+
+  .close_button_modal {
+    top: -20px;
+    right: -20px;
+  }
+
+  .container_name_data_title_tags {
+    height: 50px;
+    padding-top: 10px;
+    width: 90vw;
+
+  }
+
+  .container_avatar_user_modal {
+    width: 50px;
+  }
+
+  .user_data_modal > p {
+    color: #515255;
+    margin-top: 5px;
+  }
+
+  .container_name_data {
+    width: 150px;
+  }
+
+  .container_title {
+    width: 90vw;
+    margin-bottom: 10px;
+    font-size: 14px;
+    font-weight: 400;
+    color: #303133;
+  }
+
+  .container_img_project_modal {
+    margin-top: 10px;
+    width: 90vw;
+  }
+
+  .container_img_project_modal img {
+    border-radius: 5px;
+  }
+
+  .container_tags {
+    width: 150px;
+  }
+
+
+  .container_description {
+    margin-top: 25px;
+    font-size: 14px;
+    width: 90vw;
+
+  }
+
+  .container_url {
+    margin-top: 25px;
+    width: 90vw;
+  }
 }
