--- a/client/src/components/TextFild/TextFild.css
+++ b/client/src/components/TextFild/TextFild.css
@@ -19,13 +19,13 @@
 
 @media only screen and (max-width: 600px) {
   .buscarTags {
-    width: 100%;
+    width: 90vw;
     display: flex;
     align-items: center;
   }
   
   .buscarTags .MuiTextField-root {
-    width: 100%;
+    width: 89vw;
   }
   
   .buscarTags .MuiInputLabel-root {
