--- a/client/src/pages/Portifolio/Portifolio.css
+++ b/client/src/pages/Portifolio/Portifolio.css
@@ -1,19 +1,20 @@
 .portifolio_container{
   width: 100%;
-  height: 100%;
+  height: 100vh;
   display:flex;
   flex-direction: column;
   align-items: baseline;
-  justify-content: center;
+  justify-content: baseline;
+  overflow-y: auto;
 }
 
 .profile {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
   width: 100%;
-  /* height: 20%; */
+  height: 30%;
+  margin-top: 50px;
 }
 
 .container_my_project {
@@ -22,7 +23,6 @@
   align-items: flex-start;
   justify-content: center;
   width: 100%;
-  height: 100%;
   padding: 20px;
 }
 
@@ -31,7 +31,6 @@
   grid-template-columns: repeat(4, minmax(0, 1fr));
   gap: 100px; 
   width: 100%;
-  height: 100%;
   margin-top: 20px;
 }
 
@@ -62,23 +61,15 @@
   }
 
   .container_basic_card {
-    display: grid;
     grid-template-columns: repeat(1, minmax(0, 1fr));
     gap: 30px; 
-    width: 100%;
-    height: 100%;
-    margin-top: 20px;
   }
   
 }
 
-@media screen and (min-width: 1200px) and (max-width: 1600px) {
+@media screen and (min-width: 768px) and (max-width: 1600px) {
   .container_basic_card {
-    display: grid;
     gap: 20px;
     grid-template-columns: repeat(3, minmax(0, 1fr));
-    width: 100%;
-    height: 100%;
-    margin-top: 20px;
   }
 }
