--- a/client/src/components/Modal/modalAddProject.css
+++ b/client/src/components/Modal/modalAddProject.css
@@ -8,7 +8,6 @@
   justify-content: baseline;
   align-items: flex-start;
   width: 100%;
-  height: 100%;
   margin-top: 25px;
 }
 
@@ -17,6 +16,7 @@
     width: 100%;
     height: 100%;
     margin-top: 15px;
+    
     justify-content: baseline;
     align-items: flex-start;
     flex-direction: column;
@@ -97,10 +97,9 @@ margin-bottom: 15px;
   .container_info_modal_add_project {
     display: flex;
     flex-direction: column-reverse;
-    justify-content: baseline;
+    justify-content: space-between;
     align-items: flex-start;
     width: 100%;
-    height: 100%;
     margin-top: 25px;
   }
 
@@ -119,6 +118,7 @@ margin-bottom: 15px;
     width: 100%;
     padding: 0;
     margin-top: 0;
+    margin-bottom: 80px;
   }
   .box_Form{
     position: relative;
