--- a/client/src/components/Modal/modalToView.css
+++ b/client/src/components/Modal/modalToView.css
@@ -102,7 +102,7 @@
   justify-content: center;
   margin-top: 25px;
   width: 100%;
-  height: 100%;
+  height: 500px;
 }
 
 .container_img_project_modal img {
@@ -115,7 +115,7 @@
   display: flex;
   align-items: baseline;
   justify-content: flex-start;
-  margin-top: 50px;
+  margin-top: 30px;
   width: 100%;
   height: 20%;
 }
@@ -123,14 +123,22 @@
 .container_url {
   display: flex;
   flex-direction: column;
+  flex-wrap: wrap;
+  text-wrap: wrap;
   align-items: baseline;
   justify-content: flex-start;
+  overflow: hidden;
   width: 100%;
   height: 20%;
 }
 
 .container_url a {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
   text-decoration: solid;
+  text-wrap: wrap;
+  overflow: hidden;
   color: #608AE1;
   cursor: pointer;
 }
@@ -181,6 +189,7 @@
   .container_img_project_modal {
     margin-top: 10px;
     width: 90vw;
+    height: 400px;
   }
 
   .container_img_project_modal img {
@@ -191,16 +200,14 @@
     width: 150px;
   }
 
-
   .container_description {
     margin-top: 25px;
     font-size: 14px;
     width: 90vw;
-
   }
 
   .container_url {
-    margin-top: 25px;
+    margin-top: 5px;
     width: 90vw;
   }
 }
